[package]
name = "papyrus_node"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["papyrus_base_layer"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap = { workspace = true }
const_format.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
libmdbx = { workspace = true, features = ["lifetimed-bytes"] }
lazy_static.workspace = true
papyrus_base_layer = { path = "../papyrus_base_layer", version = "0.3.0" }
papyrus_config = { path = "../papyrus_config", version = "0.3.0" }
papyrus_common = { path = "../papyrus_common", version = "0.3.0" }
papyrus_monitoring_gateway = { path = "../papyrus_monitoring_gateway", version = "0.3.0" }
papyrus_network = { path = "../papyrus_network", version = "0.3.0" }
papyrus_p2p_sync = { path = "../papyrus_p2p_sync", version = "0.3.0" }
papyrus_rpc = { path = "../papyrus_rpc", version = "0.3.0" }
papyrus_storage = { path = "../papyrus_storage", version = "0.3.0" }
papyrus_sync = { path = "../papyrus_sync", version = "0.3.0" }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api.workspace = true
starknet_client = { path = "../starknet_client" }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
assert-json-diff.workspace = true
colored.workspace = true
metrics-exporter-prometheus.workspace = true
pretty_assertions.workspace = true
insta = { workspace = true, features = ["json"] }
tempfile.workspace = true
test_utils = { path = "../test_utils" }
