[package]
name = "papyrus_node"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["papyrus_base_layer", "clap", "reqwest", "tokio"]

[features]
default = ["rpc"]
rpc = ["papyrus_rpc"]

[[bin]]
name = "central_source_integration_test"
required-features = ["futures-util", "tokio-stream"]
path = "src/bin/central_source_integration_test.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
const_format.workspace = true
futures.workspace = true
itertools.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
papyrus_base_layer = { path = "../papyrus_base_layer", version = "0.4.0-dev.4" }
papyrus_config = { path = "../papyrus_config", version = "0.4.0-dev.4" }
papyrus_common = { path = "../papyrus_common", version = "0.4.0-dev.4" }
papyrus_consensus = { path = "../sequencing/papyrus_consensus", version = "0.4.0-dev.4" }
papyrus_monitoring_gateway = { path = "../papyrus_monitoring_gateway", version = "0.4.0-dev.4" }
papyrus_network = { path = "../papyrus_network", version = "0.4.0-dev.4" }
papyrus_p2p_sync = { path = "../papyrus_p2p_sync", version = "0.4.0-dev.4" }
papyrus_protobuf = { path = "../papyrus_protobuf", version = "0.4.0-dev.4" }
papyrus_rpc = { path = "../papyrus_rpc", version = "0.4.0-dev.4", optional = true }
papyrus_storage = { path = "../papyrus_storage", version = "0.4.0-dev.4" }
papyrus_sync = { path = "../papyrus_sync", version = "0.4.0-dev.4" }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api = { workspace = true, features = ["testing"] }
starknet_client = { path = "../starknet_client" }
strum.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
validator = { workspace = true, features = ["derive"] }

# Binaries dependencies
futures-util = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }


[dev-dependencies]
assert-json-diff.workspace = true
colored.workspace = true
metrics-exporter-prometheus.workspace = true
pretty_assertions.workspace = true
insta = { workspace = true, features = ["json"] }
tempfile.workspace = true
test_utils = { path = "../test_utils" }
