[package]
name = "papyrus_pending"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
starknet_client = { path = "../starknet_client" }

[dev-dependencies]
pretty_assertions.workspace = true
starknet_client = { path = "../starknet_client", features = ["testing"] }
test_utils = { path = "../test_utils" }
tokio = { workspace = true, features = ["full", "sync"] }
