[package]
name = "papyrus_proc_macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
syn = "2.0.15"
quote = "1.0.26"

[dev-dependencies]
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prometheus-parse.workspace = true
test_utils = { path = "../test_utils" }

[lib]
proc-macro = true
