[package]
name = "papyrus_proc_macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Procedural macros for the Papyrus node"

[dependencies]
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.26"

[dev-dependencies]
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
papyrus_common = { path = "../papyrus_common", version = "0.4.0-dev.1" }
prometheus-parse.workspace = true
test_utils = { path = "../test_utils" }

[lib]
proc-macro = true
