[package]
name = "papyrus_protobuf"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bytes.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
primitive-types.workspace = true
prost.workspace = true
prost-types.workspace = true
starknet_api.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
papyrus_common = { path = "../papyrus_common", version = "0.4.0-dev.2" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[build-dependencies]
prost-build.workspace = true
