[package]
name = "papyrus_protobuf"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
testing = ["rand", "rand_chacha", "test_utils"]

[dependencies]
bytes.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
primitive-types.workspace = true
prost.workspace = true
prost-types.workspace = true
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
starknet_api.workspace = true
starknet-types-core.workspace = true
test_utils = { path = "../test_utils", optional = true }
thiserror.workspace = true
papyrus_common = { path = "../papyrus_common", version = "0.4.0-dev.2" }

[dev-dependencies]
test_utils = { path = "../test_utils" }

[build-dependencies]
prost-build.workspace = true
