[package]
name = "papyrus_storage"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A storage implementation for a Starknet node."

[features]
default = ["starknet_api"]
testing = ["tempfile"]

[dependencies]
byteorder.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap = { workspace = true, features = ["serde"] }
integer-encoding.workspace = true
libmdbx = { workspace = true, features = ["lifetimed-bytes"] }
num-bigint.workspace = true
primitive-types.workspace = true
parity-scale-codec.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing = { workspace = true, features = ["log"] }
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta = { workspace = true, features = ["yaml"] }
paste.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_chacha.workspace = true
schemars = { workspace = true, features = ["preserve_order"] }
tempfile = { workspace = true }
test_utils = { path = "../test_utils" }
