[package]
name = "papyrus_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
futures.workspace = true
hex.workspace = true
indexmap = { workspace = true, features = ["serde"] }
libmdbx = { workspace = true, features = ["lifetimed-bytes"] }
papyrus_storage = { path = "../papyrus_storage" }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api.workspace = true
starknet_client = { path = "../starknet_client" }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
simple_logger.workspace = true
assert_matches.workspace = true
mockall.workspace = true
papyrus_storage = { path = "../papyrus_storage", features = ["testing"] }
starknet_client = { path = "../starknet_client", features = ["testing"] }
starknet_api = { workspace = true, features = ["testing"] }
