[package]
name = "starknet_api"
version = "0.1.0"
edition = "2021"

[features]
testing = []

[dependencies]
hex = { version = "0.4.3" }
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.81" }
thiserror = { version = "1.0.31" }
web3 = { version = "0.18.0" }
derive_more = {version = "0.99.17"}

[dev-dependencies]
assert_matches = { version = "1.5.0" }
