[package]
name = "starknet_client"
version = "0.1.0"
edition = "2021"

[features]
testing = ["mockall"]

[dependencies]
async-trait = { version = "0.1.56" }
indexmap = { version = "1.9.2", features = ["serde"] }
mockall = { version = "0.11.2" , optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.81" , features = ["arbitrary_precision"]}
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "9a1fca8" }
thiserror = { version = "1.0.31" }
tokio = { version = "1.18.2", features = ["full","sync"] }
tokio-retry = { version = "0.3" }
tracing = { version = "0.1.37" }
url = { version = "2.2.2" }
http = {version= "0.2.8"}

[dev-dependencies]
assert = { version = "0.0.4" }
assert_matches = { version = "1.5.0" }
mockall = { version = "0.11.2" }
mockito = { version = "0.31.0" }
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", features = ["testing"] , rev = "9a1fca8"}

