[package]
name = "starknet_client"
version = "0.1.0"
edition = "2021"

[features]
testing = ["mockall"]

[dependencies]
async-trait.workspace = true
cairo-lang-starknet.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
mockall = { workspace = true, optional = true }
os_info.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tokio-retry.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert.workspace = true
assert_matches.workspace = true
mockall.workspace = true
mockito.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
