[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
tracing = { workspace = true, features = ["log"] }
web3.workspace = true

[dev-dependencies]
