[package]
name = "test_utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[features]

[dependencies]
cairo-lang-starknet.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
indexmap = { workspace = true, features = ["serde"] }
primitive-types = { workspace = true, features = ["serde"] }
prometheus-parse.workspace = true
num-bigint.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api = { workspace = true, features = ["testing"] }
starknet-types-core.workspace = true
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions.workspace = true
