[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.44" }
log = { version = "0.4" }
log4rs = { version =  "1.1.1" }
ron = { version ="0.7" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.81" }
thiserror = { version = "1.0.31" }

[dev-dependencies]
assert_matches = { version = "1.5.0" }
tempfile = { version = "3.3.0" }
