[package]
name = "papyrus_block_builder"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A block-builder for Starknet blocks"

[dependencies]
papyrus_storage = { path = "../../papyrus_storage", version = "0.4.0-dev.2", features = ["testing"] }
starknet_api.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test_utils = { path = "../../test_utils" }
