[package]
name = "papyrus_consensus"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Reach consensus for Starknet"

[dependencies]
async-trait.workspace = true
futures.workspace = true
starknet_api.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
papyrus_protobuf = { path = "../../papyrus_protobuf", version = "0.4.0-dev.2" }
papyrus_network = { path = "../../papyrus_network", version = "0.4.0-dev.2" }

[dev-dependencies]
mockall.workspace = true
